1.0-devel
======================

 * Started integration tests for discussions.
   [tiran]

 * Ported topic migration and criteria enhancements + additional criteria
   from ender topic branch. Thx to Alec Mitchell for his great work! The new
   criteria are: ATSelectionCriterion, ATDateRangeCriterion,
   ATReferenceCriterion and ATBooleanCriterion.
   [allecm, tiran]

 * Changed archetype names of criteria and removed the AT prefix.
   [tiran]

 * Added unit tests for criteria and ATTopic.
   [allecm, tiran]

 * Added translate tab when LinguaPlone is available at installation or
   reinstallation time.
   [tiran]

 * Added mini scale with 200x200.
   [tiran]

 * Added integration tests for view and edit templates.
   [tiran]

 * I made major changes to the unit test suite. Also I've added more field
   tests, some important interface tests and cleaner and better base classes
   for tests.
   [tiran]

 * prepare ATFolder for use with TemplateMixin, use generic /view instead of 
   /folder_listing as default and immediate view.
   [yenzenz]

 * Changed the way ConstrainTypes gets mixed in: Now ATCT is always subclassing
   folders from the ConstrainTypes class and the schema is always in the folder
   schema. Before this change ppl couldn't rely on the api. When the feature
   is disabled the fields are not shown in the schema and the overwritten
   methods are using a "shortcut" to the default methods.
   [tiran]

 * Renamed some methods in the constrain mixin to start with _ct_ for a clean
   name space.
   [tiran]

 * Added a tag methods to NewsItem for its image. Also changed the caption from
   TextField to StringField since it should contain only a small sentence or
   similar. The caption is applied as title to the news item image.
   [tiran]

 * When running unit tests all features like constrain mixin and template
   mixin are forced to be enabled in order to keep the tests sane and to test
   all features under all circumstances
   [tiran]
